Part of 1.0.8 update

--- a/EmergencyHoundMobile/www/views/dashboard.html
+++ b/EmergencyHoundMobile/www/views/dashboard.html
@@ -1,5 +1,5 @@
 ﻿<div >
-    <section class="panel panel-default m-t-sm m-b-small" ng-show="OrgCount>0">
+    <section class="panel panel-default m-t-sm m-b-sm" ng-show="OrgCount>0">
         <div class="row m-l-none m-r-none bg-light lter">
             <div class="col-sm-6 col-md-3 padder-v b-r b-light">
                 <span class="fa-stack fa-2x pull-left m-r-sm">
