--- a/EmergencyHoundWeb/Views/Resource/Edit.cshtml
+++ b/EmergencyHoundWeb/Views/Resource/Edit.cshtml
@@ -160,7 +160,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label>Description</label>
-                                    @Html.TextAreaFor(model => model.t_em_resource_RESOURCE_DESC, new { @class = "form-control", @placeholder = "" })
+                                    @Html.TextAreaFor(model => model.t_em_resource_RESOURCE_DESC, new { @class = "form-control", @placeholder = "", @required = "required" })
                                 </div>
                             </div>
                         </div>
