--- a/EmergencyHoundMobile/www/views/config.html
+++ b/EmergencyHoundMobile/www/views/config.html
@@ -1,4 +1,4 @@
-﻿<h3>Functions</h3>
+﻿<h3>Settings</h3>
 
 <!-- START: SAVE MESSAGE -->
 <div class="alert alert-success " ng-show="saveState">
@@ -8,12 +8,58 @@
 <!-- END: SAVE MESSAGE -->
 
 <section class="panel panel-default">
+    <div class="panel-heading font-bold ">User & Tracking Settings</div>
+    <div class="panel-body">
+        <div class="form-horizontal">
+            <div class="form-group">
+                <label class="col-sm-3 control-label">User Name</label>
+                <div class="col-sm-3">
+                    <div class="input-group">
+                        <input type="text" class="form-control" data-ng-model="firstName" value="{{firstName}}" />
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="input-group">
+                        <input type="text" class="form-control" data-ng-model="lastName" value="{{lastName}}" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Phone</label>
+                <div class="col-sm-9">
+                    <div class="input-group">
+                        <input type="text" class="form-control" data-ng-model="phone" value="{{phone}}" />
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-sm-offset-3 col-sm-6">
+                    <div class="input-group">
+                        <div class="checkbox"> <label> <input type="checkbox" data-ng-model="trackInd" value="{{trackInd}}"> Allow location tracking</label> </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group"> 
+                <div class="col-sm-offset-3 col-sm-9"> 
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="submit" data-ng-click="save2()">Save</button>
+                    </span>
+                </div> 
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<section class="panel panel-default">
     <div class="panel-heading font-bold ">Mobile Configuration Settings</div>
     <div class="panel-body">
         <div class="form-horizontal">
             <div class="form-group">
-                <label class="col-sm-2 control-label">Server URL</label>
-                <div class="col-sm-10">
+                <label class="col-sm-3 control-label">Server URL</label>
+                <div class="col-sm-9">
                     <div class="input-group">
                         <input type="text" class="form-control" data-ng-model="serverURL" value="{{serverURL}}" />
                         <span class="input-group-btn">
@@ -25,23 +71,24 @@
 
 
             <div class="form-group">
-                <label class="col-sm-2 control-label">Mobile Version</label>
-                <div class="col-sm-10">
+                <label class="col-sm-3 control-label">Mobile DB Version</label>
+                <div class="col-sm-9">
                     <div class="input-group">
                         <input type="text" class="form-control" data-ng-model="version" value="{{version}}" readonly="readonly" />
                     </div>
                 </div>
             </div>
 
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Functions</label>
+                <div class="col-sm-9">
+                    <div class="input-group">
+                        <button type="submit" class="btn btn-sm btn-danger" data-ng-click="delDB1()">Delete Local Data</button>
+                        <button type="submit" class="btn btn-sm btn-danger" data-ng-click="syncing()">Manual Pull Sync</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="form-group">
-            <button type="submit" class="btn btn-sm btn-danger" data-ng-click="delDB1()">Delete Local Data</button>
-            <button type="submit" class="btn btn-sm btn-danger" data-ng-click="syncing()">Manual Pull Sync</button>
-        </div>
-    </div>
-</div>
