--- a/EmergencyHoundWeb/Views/Incident/Index.cshtml
+++ b/EmergencyHoundWeb/Views/Incident/Index.cshtml
@@ -199,7 +199,7 @@
                                                 <a href="@Url.Action("Edit", "Incident", new { id = item.INCIDENT_IDX })" class="btn btn-rounded btn-xs btn-default"><i class="fa fa-pencil fa-success"></i></a>
                                                 <div class="delete-section" style="display:inline">
                                                     <a class=" btn btn-rounded btn-xs btn-danger delete-link" href="@Url.Action("Delete", new {id = item.INCIDENT_IDX})"><i class="fa fa-times "></i></a>
-                                                    <div class="btn btn-rounded btn-xs btn-warning delete-confirm" style="display:none" data-delete-id="@item.INCIDENT_IDX" data-delete-path="@(Url.Content("~/"))" data-delete-p="/Incident/Delete"><b>Confirm Delete</b></div>
+                                                    <div class="btn btn-rounded btn-xs btn-warning delete-confirm" style="display:none" data-delete-id="@item.INCIDENT_IDX" data-delete-path="@(new Uri(Request.Url, Url.Content("~")))" data-delete-p="/Incident/Delete"><b>Confirm Delete</b></div>
                                                 </div>
                                             </td>
                                             <td>
