--- a/EmergencyHoundMobile/www/views/incidents.html
+++ b/EmergencyHoundMobile/www/views/incidents.html
@@ -58,7 +58,7 @@
                             </td>
                             <td>{{incident.incidenT_DESC}}</td>
                             <td>{{incident.sharE_TYPE}}</td>
-                            <td>{{incident.incidenT_START_DT}}</td>
+                            <td>{{incident.incidenT_START_DT | date : 'MM/dd/yyyy h:mma'}}</td>
                             <td>{{incident.incidenT_PRIORITY}}</td>
                         </tr>
                     </table>
