--- a/EmergencyHoundWeb/Views/Dashboard/Index.cshtml
+++ b/EmergencyHoundWeb/Views/Dashboard/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <script src="~/Scripts/feedback-me/jquery.feedback_me.js"></script>
 <link href="~/Scripts/feedback-me/jquery.feedback_me.css" rel="stylesheet" />
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHVXg0LHBI8Myw1PrjRlfLRBxrEgZLHqY"></script>
 <script type="text/javascript">
     var poly;       //impacted area polygon
     var polyOptions = {
