--- a/EmergencyHoundWeb/Views/Incident/Index.cshtml
+++ b/EmergencyHoundWeb/Views/Incident/Index.cshtml
@@ -2,8 +2,7 @@
 @{
     ViewBag.Title = "Incident Search";
 }
-
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHVXg0LHBI8Myw1PrjRlfLRBxrEgZLHqY"></script>
 <script type="text/javascript">
     //script for map tab
     var map2;
