--- a/EmergencyHoundWeb/Views/Incident/Map.cshtml
+++ b/EmergencyHoundWeb/Views/Incident/Map.cshtml
@@ -3,8 +3,7 @@
     ViewBag.Title = "Incident Location";
 }
 <script type="text/javascript" src="~/Scripts/areyousure/jquery.are-you-sure.js"></script>
-
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHVXg0LHBI8Myw1PrjRlfLRBxrEgZLHqY"></script>
 <script type="text/javascript">
     //global variables
     var map;
