--- a/EmergencyHoundWeb/Views/Resource/Index.cshtml
+++ b/EmergencyHoundWeb/Views/Resource/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Resource List";
 }
 
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHVXg0LHBI8Myw1PrjRlfLRBxrEgZLHqY"></script>
 <script type="text/javascript">
     //script for showing single resource on modal map
     var map;
