--- a/EmergencyHoundWeb/Views/Shared/_Layout.cshtml
+++ b/EmergencyHoundWeb/Views/Shared/_Layout.cshtml
@@ -84,10 +84,10 @@
                     <ul class="dropdown-menu animated fadeInRight">
                         <li class="arrow top"></li>
                         <li>
-                            <a href='@Url.Action("MyProfile", "Account")'>Profile</a>
+                            <a href='@Url.Action("MyProfile", "Account")' >Profile</a>
                         </li>
                         <li>
-                            <a href="~/Content/help.html">Help</a>
+                            <a href="~/Content/help.html" target="_blank">Help</a>
                         </li>
                         <li class="divider"></li>
                         <li>
