--- a/EmergencyHoundWeb/Views/Incident/RptFema201.cshtml
+++ b/EmergencyHoundWeb/Views/Incident/RptFema201.cshtml
@@ -3,8 +3,7 @@
     ViewBag.Title = "Incident Briefing";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHVXg0LHBI8Myw1PrjRlfLRBxrEgZLHqY"></script>
 <script type="text/javascript">
     //global variables
     var map;
