--- a/EmergencyHoundWeb/Views/Resource/Add.cshtml
+++ b/EmergencyHoundWeb/Views/Resource/Add.cshtml
@@ -5,7 +5,7 @@
 
 <script src="~/Scripts/chosen/chosen.jquery.js"></script>
 <link href="~/Scripts/chosen/chosen.css" rel="stylesheet" />
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHVXg0LHBI8Myw1PrjRlfLRBxrEgZLHqY"></script>
 <script type="text/javascript">
     var map;
     var marker;
