--- a/EmergencyHoundWeb/Views/Resource/Edit.cshtml
+++ b/EmergencyHoundWeb/Views/Resource/Edit.cshtml
@@ -3,8 +3,7 @@
 @{
     ViewBag.Title = "Edit Resource";
 }
-
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHVXg0LHBI8Myw1PrjRlfLRBxrEgZLHqY"></script>
 <script type="text/javascript">
     //script for placing and showing single resource on modal map
     var map;
